--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@infectoone/vue-ganttastic": "^2.3.2",
     "@vueuse/core": "^10.2.1",
     "axios": "^1.6.7",
+    "leaflet": "^1.9.4",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
