--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.7",
     "leaflet": "^1.9.4",
     "pinia": "^2.1.3",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.2",
