--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@infectoone/vue-ganttastic": "^2.3.2",
     "@vueuse/core": "^10.2.1",
     "axios": "^1.6.7",
+    "front-plan-de-charge": "file:",
     "leaflet": "^1.9.4",
     "pinia": "^2.1.3",
     "socket.io-client": "^4.8.1",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^18.16.17",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
@@ -37,6 +39,7 @@
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.14",
     "cypress": "^13.7.1",
+    "esbuild": "^0.25.3",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
