--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,10 +1,11 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/pinia.d.ts"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
+    "types": ["pinia-plugin-persistedstate"],
     "paths": {
       "@/*": ["./src/*"]
     }
