--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     }
   ],
   "compilerOptions": {
-    "types": ["vue3-toastify/global"]
+    "types": ["vue3-toastify/global", "pinia-plugin-persistedstate"]
   }
 }
